test_yuriiq/catalog/language/german/affiliate/password.php
<?php

// text
$_['text_account']	= 'Konto';
$_['text_success']	= 'Ihr Passwort wurde aktualisiert.';
$_['text_password']	= 'Ihr Passwort';

// error
$_['error_password']	= 'Passwort muss zwischen 4 und 20 Zeichen lang sein!';
$_['error_confirm']	= 'Passwort und Best채tigung stimmt nicht 체berein!';

// entry
$_['entry_password']	= 'Passwort:';
$_['entry_confirm']	= 'Passwort best채tigen:';

// heading
$_['heading_title']	= 'Passwort 채ndern';
?>